@@ -44,6 +44,7 @@ master
 - Fix broken type checks on volatile int types.
 - Add stdio source input support for the compiler.
 - Add support for compiler intrinsic calls at compile-time.
+- Improved documentation generator to support compile-time calls in function type argument list.
 
 [Modules]
 
